# HLSFactory

./: .clang-format  .clangd  .env.template  .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  audit_configs.py  datasets_builtin.py  generate_chstone_tomls.py  generate_flowgnn_tomls.py  generate_machsuite_tomls.py  generate_polybench_reproducible_tomls.py  pyproject.toml
.github/workflows/: documentation.yaml  packaging.yaml  site.yaml
ayush_saxena_ece_8893_spring_26/Ayush_Saxena_lab_2_ECE_8893_spring_26/: dataset_hls.tcl  host.cpp  top.cpp
ayush_saxena_ece_8893_spring_26/Ayush_Saxena_lab_3_ECE_8893_spring_26/: dataset_hls.tcl  dcl.h
demos/demo_autodse/: analyze.py
demos/demo_autodse_flow/: run_autodse.py
demos/demo_custom_datasets/: custom_datasets.ipynb
demos/demo_full_flow_intel/: full_flow_intel.py
demos/demo_full_flow_xilinx/: full_flow_xilinx.ipynb  full_flow_xilinx.py
demos/demo_loc_count/: loc_count.py
demos/demo_ml/: .gitignore  ml_agg.py  ml_analyze.py  ml_model.py  ml_pre.py
demos/demo_regression_testing/: regression_testing.py  regression_testing_analysis.py
demos/demo_test_add_design/: test.py
dev/: generate_accelerators_tomls.py  generate_hp_fft_tomls.py  generate_polybench_tomls.py  generate_pp4fpgas_tomls.py
docs/source/: built_in_datasets.md  concepts.md  conf.py  datasets_builtin.py  extending.md  index.md  index.rst  prebuilt_dataset.md  setup.md
docs/source/_static/: custom.css
docs/source/apidocs/: index.rst
docs/source/apidocs/hlsfactory/: hlsfactory.data_packaging.rst  hlsfactory.datasets_builtin.rst  hlsfactory.define_frontend.rst  hlsfactory.design_config.rst  hlsfactory.flow_bambu.rst  hlsfactory.flow_config.rst  hlsfactory.flow_harp.rst  hlsfactory.flow_intel.rst  hlsfactory.flow_vitis.rst  hlsfactory.framework.rst  hlsfactory.gather_data.rst  hlsfactory.jinja_frontend.rst  hlsfactory.loc_flow.rst  hlsfactory.opt_dsl_frontend.rst  hlsfactory.opt_dsl_frontend_intel.rst  hlsfactory.opt_dsl_frontend_v2.rst  hlsfactory.opt_dsl_v2.opt_dsl.rst  hlsfactory.opt_dsl_v2.rst  hlsfactory.rst  hlsfactory.scripts.generate_design_configs.rst  hlsfactory.scripts.rst  hlsfactory.utils.rst
docs/source/framework/: data.md  design_config.md  designs_datasets.md  flows.md  hls_build_framework.md.old  index.md  optdsl.md
docs/source/tutorials/: custom_designs.md  data_agg.md  index.md  intel_flow.md  ml_qor.md  opt_dsl.md  tool_bench.md  xilinx_flow.md
hlsfactory/: __init__.py  data_packaging.py  datasets_builtin.py  define_frontend.py  design_config.py  flow_bambu.py  flow_config.py  flow_harp.py  flow_intel.py  flow_vitis.py  framework.py  gather_data.py  hls_tag.py  intel_machsuite.py  intel_machsuite_ch.py  jinja_frontend.py  loc_flow.py  opt_dsl_frontend.py  opt_dsl_frontend_intel.py  opt_dsl_frontend_v2.py  utils.py
hlsfactory/autodse/: flow_autodse.py
hlsfactory/autodse-vitis/: flow_autodse_vitis.py  local_multi_launch.sh  server_env.sh  server_multi_launch.sh  server_single_run.sh  server_submit.batch  server_usage.md
hlsfactory/autodse-vitis/src/: test_dse_LevelHeap_DFS.py
hlsfactory/autodse-vitis/src/concrete_design/: c_to_rtl_mapper.py  csynth_analyzer.py  design.py  input_c_analyzer.py
hlsfactory/autodse-vitis/src/design_space/: container.py  explorer.py  logger.py
hlsfactory/autodse-vitis/src/objective/: objectives.py
hlsfactory/autodse/0_src/: main.py  test_bottleneck_module.py  test_concrete_design.py  test_dse.py  test_dse_LevelHeap_DFS.py
hlsfactory/autodse/0_src/algorithm_factory/: factory.py
hlsfactory/autodse/0_src/concrete_design/: __init__.py  c_to_rtl_mapper.py  csynth_analyzer.py  design.py  llvm_ir_parser.py
hlsfactory/autodse/0_src/design_space/: container.py  explorer.py  logger.py
hlsfactory/autodse/0_src/objective/: objectives.py
hlsfactory/autodse/vitishlssyn/3mm/: 3mm.cpp  (+3 more)
hlsfactory/autodse_vitis/: flow_autodse_vitis.py  local_env.sh  local_single_run.sh  server_env.sh  server_multi_launch.sh  server_single_run.sh  usage.md
hlsfactory/autodse_vitis/src/: test_dse_LevelHeap_DFS.py
hlsfactory/class_ece8893_spring_2025/lab2_hanchen/: compute_attention_cp.cpp  dataset_hls.tcl  script.tcl  top.cpp
hlsfactory/class_ece8893_spring_2025/lab3_hanchen/: dataset_hls.tcl  dcl.h  result  top.cpp
hlsfactory/hls_dataset_sources/auto_ntt/: Makefile  README.md  setup.sh
hlsfactory/hls_dataset_sources/hlsyn-vitis/: README.md
hlsfactory/hls_dataset_sources/hp_fft_hls/: common.tcl
hlsfactory/hls_dataset_sources/s2cbench/: README.txt
hlsfactory/hls_dataset_sources/soda/: dataset_hls_ip_export.tcl
hlsfactory/hls_dataset_sources/stream_hls/: scratch.py  scratch.sh
hlsfactory/hlsauto/: hlsauto.py  readme.md
hlsfactory/opt_dsl_v2/: README.md  opt_dsl.py  test.txt
hlsfactory/scripts/: __init__.py  audit_design_configs.py  generate_design_configs.py
lab3_sushkrutha/: top.cpp
recipe/: meta.yaml
release_scripts/: build_sphinx_docs.sh  do_all.sh  package_conda.sh  package_python.sh
site/: colors.css  fonts.css  index.html  stylesheet.css
tests/: dataset_validator.py  gather_runtime.py  hls_auto_test_designs.md  test_aggregation.py  test_datasets.py  test_datasets_flows.py  test_flows.py  test_hlsauto.py  test_package_install.py  test_utils.py
tests/config_tests/: __init__.py  test_confg.toml  test_config.py  test_framework_config.py
(+3387 files in other folders)
