[project]
name = "hlsfactory"
version = "1.1.0"
readme = "README.md"
license = { file = "LICENSE" }
description = "A Framework Empowering High-Level Synthesis Datasets for Machine Learning and Beyond"
authors = []
keywords = [
    "High-Level Synthesis",
    "FPGA",
    "Electronic Design Automation",
    "Dataset",
]
classifiers = []
requires-python = ">=3.12"

dependencies = [
    "pandas",
    "psutil",
    "PyYAML",
    "tqdm",
    "python-dotenv",
    "pydantic",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "umap-learn>=0.5.11",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-mock"]
docs = [
    "sphinx>=9",
    "sphinx-autobuild",
    "furo>=2024",
    "myst-parser",
    "sphinx-copybutton",
    "sphinxext-opengraph",
    "sphinx-autodoc2",
]
demos = [
    "matplotlib",
    "seaborn",
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "jupyter",
]

[project.urls]
"Homepage" = "https://github.com/sharc-lab/HLSFactory"
"Repository" = "https://github.com/sharc-lab/HLSFactory"
"Documentation" = "https://github.com/sharc-lab/HLSFactory"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hlsfactory"]

[tool.setuptools.package-data]
hlsfactory = ["**", "**/*"]

[tool.setuptools.exclude-package-data]
hlsfactory = ["**/*.npy", "**/*.bin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-s", "-v", "--cov=hlsfactory", "--cov-report=html"]
log_cli = true

[tool.ruff.lint]

[dependency-groups]
dev = [
    "ty>=0.0.23",
    "ruff>=0.11.11"
]

[tool.ruff]
extend-exclude = ["hlsfactory/hls_dataset_sources"]


